feat(motorista): align reservations UI with fleet manager and split trip start flow
- Use fleet-style reservation cards, filters, and detail layout with route map
- Add OSRM proxy for route tracing in dev
- Sort driver reservations newest-first and add completed filter
- Split departure checklist from trip start (register checklist, then start trip)
- Add completed reservations endpoint and iniciar-corrida page